Fix bug with fade collapse in bg-offset

--- a/components/fade-collapse/fade-collapse.styl
+++ b/components/fade-collapse/fade-collapse.styl
@@ -23,7 +23,8 @@
 		height: 30px
 
 	.fill-offset &
-		background-image: linear-gradient(to bottom, var(--theme-bg-offset-trans) 0, var(--theme-bg-offset) 100%)
+		// Use the base offset so that it doesn't get selected by the fill-offset child selector.
+		background-image: linear-gradient(to bottom, var(--theme-bg-offset-trans-base) 0, var(--theme-bg-offset-base) 100%)
 
 	.fill-gray &
 		background-image: linear-gradient(to bottom, var(--theme-gray-trans) 0, var(--theme-gray) 100%)
