--- a/stylus/common/mixins.styl
+++ b/stylus/common/mixins.styl
@@ -17,6 +17,8 @@ theme-dark()
 	--theme-bi-fg: var(--dark-theme-bi-fg)
 	--theme-bg: var(--dark-theme-bg)
 	--theme-bg-trans: var(--dark-theme-bg-trans)
+	--theme-bg-offset-base: var(--dark-theme-bg-offset-base)
+	--theme-bg-offset-trans-base: var(--dark-theme-bg-offset-trans-base)
 	--theme-bg-offset: var(--dark-theme-bg-offset)
 	--theme-bg-offset-trans: var(--dark-theme-bg-offset-trans)
 	--theme-bg-subtle: var(--dark-theme-bg-subtle)
